   already does the right thing wrt. reading the default browser from GNOME,
   KDE, XCE, and other desktops. (LP: #198449)
 - data/general-hooks/generic.py: Only attach ~/.xsession_errors if the bug is
   reported in the same XDG session as the crash happened. (LP: #869974)
 - Ignore crashes for programs which got updated in between the crash and
   reporting. (LP: #132904)

Improvements:
 - apport-retrace: Add --timestamp option to prepend a timestamp to log
   messages. This is useful for batch operations.
 - crash-digger: Call apport-retrace with --timestamps, to get consistent
   timestamps in log output.
 - hookutils.py: Add two new functions attach_gsettings_package() and
   attach_gsettings_schema() for adding user-modified gsettings keys to a
   report. (LP: #836489)
 - hookutils.py: Add new function in_session_of_problem() which returns whether
   the given report happened in the currently running XDG session. This can be
   used to determine if e. g. ~/.xsession-errors is relevant and should be
   attached.

1.23.1 (2011-09-29)
-------------------
Bug fixes:
 - apport/crashdb.py: Ensure that duplicate table only has one entry per report
   ID.
 - apport-retrace: Pass correct executable path to gdb in --gdb with --sandbox
   mode.
 - apport-retrace: Do not leave behind temporary directories on errors.
 - apport-retrace: Drop assertion failure for existance of "Stacktrace". This
   isn't present in the case of gdb crashing, and there is not much we can do
   about it. This should not break the retracer.
 - apport/report.py: Unwind XError() from stack traces for the "StacktraceTop"
   field, as they take a significant part of the trace. This causes bugs to be
   duplicated which really have different causes.

1.23 (2011-09-14)
-----------------
Improvements:
 - crashdb.py, crash-digger, dupdb-admin: Drop the concept of "duplicate DB
   consolidation". Such massive queries cause timeouts with e. g. Launchpad.